--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -493,5 +493,14 @@
   "All comply": "All comply",
   "Any one": "Any one",
   "Keep the original file name": "Keep the original file name",
-  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy."
+  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.",
+  "Fix early images not displaying": "Fix early images not displaying",
+  "This situation may occur with diaries before version 0.65.5": "This situation may occur with diaries before version 0.65.5",
+  "Fix privacy mode diary to display in normal mode": "Fix privacy mode diary to display in normal mode",
+  "This situation may occur with diaries before version 1.3.9": "This situation may occur with diaries before version 1.3.9",
+  "Fix audio and video files not being recorded": "Fix audio and video files not being recorded",
+  "This situation only occurs when adding diaries containing audio and video files in version 1.25.9": "This situation only occurs when adding diaries containing audio and video files in version 1.25.9",
+  "Fixing in progress": "Fixing in progress",
+  "Fix completed": "Fix completed",
+  "Fix Tool": "Fix Tool"
 }
