--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/fr-FR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/fr-FR.json
@@ -493,5 +493,14 @@
   "All comply": "Toutes respectées",
   "Any one": "N'importe laquelle",
   "Keep the original file name": "Conserver le nom de fichier original",
-  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "Lors de l'ajout de fichiers, utilisez le nom de fichier original. Les fichiers ayant le même Sha256 ne seront plus enregistrés qu'en une seule copie."
+  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "Lors de l'ajout de fichiers, utilisez le nom de fichier original. Les fichiers ayant le même Sha256 ne seront plus enregistrés qu'en une seule copie.",
+  "Fix early images not displaying": "Corriger l'affichage manquant des images anciennes",
+  "This situation may occur with diaries before version 0.65.5": "Cette situation peut se produire avec des journaux antérieurs à la version 0.65.5",
+  "Fix privacy mode diary to display in normal mode": "Corriger l'affichage du journal en mode privé en mode normal",
+  "This situation may occur with diaries before version 1.3.9": "Cette situation peut se produire avec des journaux antérieurs à la version 1.3.9",
+  "Fix audio and video files not being recorded": "Corriger l'enregistrement manquant des fichiers audio et vidéo",
+  "This situation only occurs when adding diaries containing audio and video files in version 1.25.9": "Cette situation ne se produit que lorsqu'on ajoute des journaux contenant des fichiers audio et vidéo dans la version 1.25.9",
+  "Fixing in progress": "Correction en cours",
+  "Fix completed": "Correction terminée",
+  "Fix Tool": "Outil de réparation"
 }
