--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ja-JP.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ja-JP.json
@@ -493,5 +493,14 @@
   "All comply": "すべて満たす",
   "Any one": "いずれか",
   "Keep the original file name": "元のファイル名を保持する",
-  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "ファイルを追加する際は、元のファイル名を使用します。同じ Sha256 のファイルは、もはや 1 つのコピーのみとして保存されません。"
+  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "ファイルを追加する際は、元のファイル名を使用します。同じ Sha256 のファイルは、もはや 1 つのコピーのみとして保存されません。",
+  "Fix early images not displaying": "初期の画像が表示されない問題を修正",
+  "This situation may occur with diaries before version 0.65.5": "0.65.5 バージョン以前の日記でこの状況が発生する場合があります",
+  "Fix privacy mode diary to display in normal mode": "プライバシーモードの日記が通常モードで表示される問題を修正",
+  "This situation may occur with diaries before version 1.3.9": "1.3.9 バージョン以前の日記でこの状況が発生する場合があります",
+  "Fix audio and video files not being recorded": "音声およびビデオファイルが記録されない問題を修正",
+  "This situation only occurs when adding diaries containing audio and video files in version 1.25.9": "1.25.9 バージョンで音声およびビデオファイルを含む日記を追加した場合にのみ、この状況が発生します",
+  "Fixing in progress": "修正作業中",
+  "Fix completed": "修正完了",
+  "Fix Tool": "修復ツール"
 }
