--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
@@ -493,5 +493,14 @@
   "All comply": "모두 충족",
   "Any one": "아무거나",
   "Keep the original file name": "원본 파일 이름 유지",
-  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "파일을 추가할 때 원본 파일 이름을 사용합니다. 동일한 Sha256 파일은 더 이상 단일 복사본으로 저장되지 않습니다."
+  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "파일을 추가할 때 원본 파일 이름을 사용합니다. 동일한 Sha256 파일은 더 이상 단일 복사본으로 저장되지 않습니다.",
+  "Fix early images not displaying": "초기 이미지가 표시되지 않는 문제 수정",
+  "This situation may occur with diaries before version 0.65.5": "0.65.5 버전 이전 일기에서 이런 상황이 발생할 수 있습니다",
+  "Fix privacy mode diary to display in normal mode": "비밀 모드 일기가 일반 모드로 표시되는 문제 수정",
+  "This situation may occur with diaries before version 1.3.9": "1.3.9 버전 이전 일기에서 이런 상황이 발생할 수 있습니다",
+  "Fix audio and video files not being recorded": "오디오 및 비디오 파일이 기록되지 않는 문제 수정",
+  "This situation only occurs when adding diaries containing audio and video files in version 1.25.9": "1.25.9 버전에서 오디오 및 비디오 파일이 포함된 일기를 추가할 때만 이런 상황이 발생합니다",
+  "Fixing in progress": "수정 중",
+  "Fix completed": "수정 완료",
+  "Fix Tool": "수리 도구"
 }
