--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ru-RU.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ru-RU.json
@@ -493,6 +493,14 @@
   "All comply": "Все соответствуют",
   "Any one": "Любое",
   "Keep the original file name": "Сохранить исходное имя файла",
-  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "При добавлении файлов используйте исходное имя файла. Файлы с одинаковым Sha256 больше не будут сохраняться в виде только одной копии."
-
+  "When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy.": "При добавлении файлов используйте исходное имя файла. Файлы с одинаковым Sha256 больше не будут сохраняться в виде только одной копии.",
+  "Fix early images not displaying": "Исправить отображение ранних изображений",
+  "This situation may occur with diaries before version 0.65.5": "Такая ситуация может возникнуть с дневниками до версии 0.65.5",
+  "Fix privacy mode diary to display in normal mode": "Исправить отображение дневника в приватном режиме в обычном режиме",
+  "This situation may occur with diaries before version 1.3.9": "Такая ситуация может возникнуть с дневниками до версии 1.3.9",
+  "Fix audio and video files not being recorded": "Исправить запись аудио- и видеофайлов",
+  "This situation only occurs when adding diaries containing audio and video files in version 1.25.9": "Такая ситуация возникает только при добавлении дневников, содержащих аудио- и видеофайлы, в версии 1.25.9",
+  "Fixing in progress": "Исправляется",
+  "Fix completed": "Исправление завершено",
+  "Fix Tool": "Инструмент почистки"
 }
