--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
@@ -502,5 +502,7 @@
   "This situation only occurs when adding diaries containing audio and video files in version 1.25.9": "1.25.9 버전에서 오디오 및 비디오 파일이 포함된 일기를 추가할 때만 이런 상황이 발생합니다",
   "Fixing in progress": "수정 중",
   "Fix completed": "수정 완료",
-  "Fix Tool": "수리 도구"
+  "Fix Tool": "수리 도구",
+  "Link card": "링크 카드",
+  "Generate card style links for hyperlinks": "하이퍼링크에 대한 카드 스타일 링크 생성"
 }
