--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -506,5 +506,6 @@
   "Generate card style links for hyperlinks": "为超链接生成卡片式链接",
   "Update available": "有可用更新",
   "Go to update": "前往更新",
-  "Remind me later": "稍后提醒"
+  "Remind me later": "稍后提醒",
+  "Upgrading and optimizing in progress. Please wait...": "正在升级优化中，请稍候…"
 }
