💄 style: Optimize the style of webdav backup download dialog

--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -508,5 +508,7 @@
   "Go to update": "前往更新",
   "Remind me later": "稍后提醒",
   "Upgrading and optimizing in progress. Please wait...": "正在升级优化中，请稍候…",
-  "Auto title": "自动标题"
+  "Auto title": "自动标题",
+  "Unknown size": "未知大小",
+  "Unknown time": "未知时间"
 }
