--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
@@ -501,5 +501,12 @@
   "Fix completed": "수정 완료",
   "Fix Tool": "수리 도구",
   "Link card": "링크 카드",
-  "Generate card style links for hyperlinks": "하이퍼링크에 대한 카드 스타일 링크 생성"
+  "Generate card style links for hyperlinks": "하이퍼링크에 대한 카드 스타일 링크 생성",
+  "Update available": "사용 가능한 업데이트",
+  "Go to update": "업데이트로 이동",
+  "Remind me later": "나중에 알림",
+  "Upgrading and optimizing in progress. Please wait...": "업그레이드 및 최적화 진행 중입니다. 잠시 기다려주세요...",
+  "Auto title": "자동 제목",
+  "Unknown size": "알 수 없는 크기",
+  "Unknown time": "알 수 없는 시간"
 }
