--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ru-RU.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ru-RU.json
@@ -501,5 +501,12 @@
   "Fix completed": "Исправление завершено",
   "Fix Tool": "Инструмент почистки",
   "Link card": "Карточка ссылки",
-  "Generate card style links for hyperlinks": "Создайте ссылки в стиле карточек для гиперссылок"
+  "Generate card style links for hyperlinks": "Создайте ссылки в стиле карточек для гиперссылок",
+  "Update available": "Доступно обновление",
+  "Go to update": "Перейти к обновлению",
+  "Remind me later": "Напомнить позже",
+  "Upgrading and optimizing in progress. Please wait...": "Выполняется обновление и оптимизация. Пожалуйста, подождите...",
+  "Auto title": "Авто заголовок",
+  "Unknown size": "Неизвестный размер",
+  "Unknown time": "Неизвестное время"
 }
