--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/de-DE.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/de-DE.json
@@ -506,7 +506,7 @@
   "Go to update": "Zum Update",
   "Remind me later": "Später erinnern",
   "Upgrading and optimizing in progress. Please wait...": "Upgrade und Optimierung läuft. Bitte warten...",
-  "Auto title": "Automatischer Titel",
+  "Default title": "Standardtitel",
   "Unknown size": "Unbekannte Größe",
   "Unknown time": "Unbekannte Zeit"
 }
