--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/en-US.json
@@ -506,7 +506,7 @@
   "Go to update": "Go to update",
   "Remind me later": "Remind me later",
   "Upgrading and optimizing in progress. Please wait...": "Upgrading and optimizing in progress. Please wait...",
-  "Auto title": "Auto title",
+  "Default title": "Default title",
   "Unknown size": "Unknown size",
   "Unknown time": "Unknown time"
 }
