--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/es-ES.json
@@ -506,7 +506,7 @@
   "Go to update": "Ir a actualizar",
   "Remind me later": "Recordarme más tarde",
   "Upgrading and optimizing in progress. Please wait...": "Actualización y optimización en curso. Por favor espere...",
-  "Auto title": "Título automático",
+  "Default title": "Título predeterminado",
   "Unknown size": "Tamaño desconocido",
   "Unknown time": "Tiempo desconocido"
 }
