--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/fr-FR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/fr-FR.json
@@ -506,7 +506,7 @@
   "Go to update": "Aller à la mise à jour",
   "Remind me later": "Me le rappeler plus tard",
   "Upgrading and optimizing in progress. Please wait...": "Mise à niveau et optimisation en cours. Veuillez patienter...",
-  "Auto title": "Titre automatique",
+  "Default title": "Titre par défaut",
   "Unknown size": "Taille inconnue",
   "Unknown time": "Heure inconnue"
 }
