--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ja-JP.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ja-JP.json
@@ -506,7 +506,7 @@
   "Go to update": "更新へ移動",
   "Remind me later": "後で通知",
   "Upgrading and optimizing in progress. Please wait...": "アップグレードと最適化を実行中です。お待ちください...",
-  "Auto title": "自動タイトル",
+  "Default title": "デフォルトタイトル",
   "Unknown size": "不明なサイズ",
   "Unknown time": "不明な時間"
 }
