--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ko-KR.json
@@ -506,7 +506,7 @@
   "Go to update": "업데이트로 이동",
   "Remind me later": "나중에 알림",
   "Upgrading and optimizing in progress. Please wait...": "업그레이드 및 최적화 진행 중입니다. 잠시 기다려주세요...",
-  "Auto title": "자동 제목",
+  "Default title": "기본 제목",
   "Unknown size": "알 수 없는 크기",
   "Unknown time": "알 수 없는 시간"
 }
