--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/pt-BR.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/pt-BR.json
@@ -506,7 +506,7 @@
   "Go to update": "Ir para atualização",
   "Remind me later": "Lembrar mais tarde",
   "Upgrading and optimizing in progress. Please wait...": "Atualização e otimização em andamento. Por favor aguarde...",
-  "Auto title": "Título automático",
+  "Default title": "Título padrão",
   "Unknown size": "Tamanho desconhecido",
   "Unknown time": "Tempo desconhecido"
 }
