--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ru-RU.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/ru-RU.json
@@ -506,7 +506,7 @@
   "Go to update": "Перейти к обновлению",
   "Remind me later": "Напомнить позже",
   "Upgrading and optimizing in progress. Please wait...": "Выполняется обновление и оптимизация. Пожалуйста, подождите...",
-  "Auto title": "Авто заголовок",
+  "Default title": "Заголовок по умолчанию",
   "Unknown size": "Неизвестный размер",
   "Unknown time": "Неизвестное время"
 }
