--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/vi-VN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/vi-VN.json
@@ -506,7 +506,7 @@
   "Go to update": "Đi đến cập nhật",
   "Remind me later": "Nhắc tôi sau",
   "Upgrading and optimizing in progress. Please wait...": "Đang nâng cấp và tối ưu hóa. Vui lòng chờ...",
-  "Auto title": "Tiêu đề tự động",
+  "Default title": "Tiêu đề mặc định",
   "Unknown size": "Kích thước không xác định",
   "Unknown time": "Thời gian không xác định"
 }
