--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-TW.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-TW.json
@@ -506,7 +506,7 @@
   "Go to update": "前往更新",
   "Remind me later": "稍後提醒",
   "Upgrading and optimizing in progress. Please wait...": "正在升級優化中，請稍候...",
-  "Auto title": "自動標題",
+  "Default title": "預設標題",
   "Unknown size": "未知大小",
   "Unknown time": "未知時間"
 }
