--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -500,13 +500,13 @@
   "Fixing in progress": "正在修复",
   "Fix completed": "修复完成",
   "Fix Tool": "修复工具",
-  "Link card": "卡片链接",
+  "Link card": "链接卡片",
   "Generate card style links for hyperlinks": "为超链接生成卡片式链接",
   "Update available": "有可用更新",
   "Go to update": "前往更新",
   "Remind me later": "稍后提醒",
   "Upgrading and optimizing in progress. Please wait...": "正在升级优化中，请稍候…",
-  "Auto title": "自动标题",
+  "Default title": "默认标题",
   "Unknown size": "未知大小",
   "Unknown time": "未知时间"
 }
