--- a/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/i18n/zh-CN.json
@@ -514,5 +514,6 @@
   "Set application lock": "设置应用锁",
   "For first-time use, it is recommended to set an app lock to protect privacy. After activation, identity verification is required every time the application is accessed.": "首次使用，建议设置应用锁以保护隐私。开启后，每次进入应用需验证身份。",
   "Set up now": "立即设置",
-  "Do not remind again": "不再提醒"
+  "Do not remind again": "不再提醒",
+  "Fingerprint recognition cannot be used alone, please set at least one other unlocking method": "指纹识别不能单独使用，请至少设置一种其他的解锁方式"
 }
